--- a/Badminton_PairUP_V2.html
+++ b/Badminton_PairUP_V2.html
@@ -7,126 +7,87 @@
   <style>
    /* === GLOBAL === */
 
+  /* === GLOBAL === */
 body {
   margin: 0;
-  font-family: 'Segoe UI', Arial, sans-serif;
-  background: linear-gradient(120deg, #3b0073 0%, #7d00b8 100%);
-  color: #f3e8ff;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #3b0073, #7d00b8);
+  color: white;
   text-align: center;
-  min-height: 100vh;
   overflow-x: hidden;
 }
-
 header {
-  padding: 14px 0 10px 0;
-  background: linear-gradient(90deg, #3b0073, #7d00b8 70%);
-  box-shadow: 0 2px 10px rgba(50,0,80,0.12);
+  padding: 10px;
 }
-
 h1 {
-  font-size: 1.8rem;
+  font-size: 42px;
   margin: 0;
-  font-weight: 900;  
-  letter-spacing: 1.5px;
-  color: #fff;
-  text-shadow: 0 2px 6px rgba(60,0,100,0.15);
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
-
-h3, h4 {
-  font-size: 1rem;
-  margin: 14px 0 8px 0;
-  color: #ffe2ff;
-  font-weight: 600;
+h3 {
+  font-size: 20px;
+  margin-bottom: 12px;
+  color: #3a1818;
 }
-
 h4 {
+  font-size: 20px;
   margin-top: 0;
-  padding-bottom: 2px;
-  color: #c5b7d6;
+  margin-bottom: 10px;
+  margin: 0;
+  padding: 0;
 }
 
 /* === PAGE 1: Player Entry / Setup === */
 .container {
-  max-width: 900px;
-  margin: 12px auto 0 auto;
-  padding: 12px 4vw;
-  background: rgba(255,255,255,0.08);
-  border-radius: 14px;
-  box-shadow: 0 4px 16px rgba(60,0,100,0.10);
-  max-height: 95vh;
-  overflow-y: auto;
+  max-width: 800px;
+  margin: auto;
+  padding: 20px;
 }
-
 .card {
-  background: #fff;
-  color: #44006e;
-  padding: 14px 10px;
-  margin-bottom: 12px;
+  background: white;
+  color: purple;
+  padding: 20px;
+  margin-bottom: 20px;
   border-radius: 12px;
-  box-shadow: 0 3px 10px rgba(50,0,80,0.18);
-  transition: box-shadow 0.2s;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
 }
-
-.card:hover {
-  box-shadow: 0 6px 18px rgba(60,0,100,0.28);
-}
-
 .card input, .card select, .card button, textarea {
   width: 100%;
   padding: 10px;
-  margin: 6px 0;
-  font-size: 0.9rem;
+  margin: 8px 0;
+  font-size: 16px;
   border-radius: 6px;
-  border: 1px solid #c3a8e4;
+  border: 1px solid #ccc;
   box-sizing: border-box;
-  background: #f7f1ff;
-  color: #3b0073;
-  transition: border 0.2s, box-shadow 0.2s;
 }
-
-.card input:focus, .card select:focus, textarea:focus {
-  border: 1.5px solid #7d00b8;
-  box-shadow: 0 0 4px #7d00b8;
-  outline: none;
-}
-
 .card button {
-  background: linear-gradient(90deg, #7d00b8 30%, #3b0073 100%);
-  color: #fff;
+  background: purple;
+  color: white;
   border: none;
   font-weight: bold;
   cursor: pointer;
   transition: background 0.3s, transform 0.2s;
-  box-shadow: 0 2px 6px rgba(60,0,100,0.10);
 }
-
-.card button:hover, .main-action:hover {
-  background: linear-gradient(90deg, #5e009c 30%, #3b0073 100%);
-  transform: scale(1.04);
+.card button:hover {
+  background: #5e009c;
+  transform: scale(1.05);
 }
-
 #player-list-table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 4px;
-  background: #f7f1ff;
-  border-radius: 6px;
-  overflow: hidden;
+  margin-top: 2px;
 }
-
 #player-list-table th, #player-list-table td {
-  border: 1px solid #d6c5e7;
-  padding: 4px 6px;
+  border: 1px solid #ccc;
+  padding: 2px 4px;
   text-align: left;
   font-size: 12px;
 }
-
 #player-list-table th {
-  background: #ece2f5;
-  color: #3b0073;
-  font-weight: 600;
+  background: #f2f2f2;
 }
-
 .delete-btn {
   background: none;
   border: none;
@@ -134,58 +95,47 @@ h4 {
   font-size: 16px;
   cursor: pointer;
 }
-
 .delete-btn:hover {
   color: #a00;
 }
-
 .fixed-pairs-list {
-  margin-top: 8px;
+  margin-top: 10px;
 }
-
 .fixed-pair-item {
-  background: #ece2f5;
-  color: #3b0073;
+  background: #eee;
+  color: black;
   padding: 6px 10px;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 5px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-weight: 500;
-  font-size: 0.85rem;
 }
-
 .fixed-pair-remove {
   color: #d11a2a;
   cursor: pointer;
-  margin-left: 10px;
-  font-size: 1em;
+  margin-left: 12px;
 }
-
 .fixed-pair-remove:hover {
   color: #a00;
 }
-
 .main-action {
   display: block;
   width: 100%;
-  background: linear-gradient(90deg, #ff9800 10%, #ffe2a0 100%);
-  color: #3b0073;
-  font-size: 1rem;
+  background: orange;
+  color: black;
+  font-size: 20px;
   font-weight: bold;
-  padding: 10px;
+  padding: 14px;
   border-radius: 8px;
-  margin-top: 14px;
+  margin-top: 20px;
   cursor: pointer;
   border: none;
   transition: background 0.3s, transform 0.2s;
-  box-shadow: 0 2px 6px rgba(60,0,100,0.10);
 }
-
 .main-action:hover {
-  background: linear-gradient(90deg, #ffb84d 10%, #ffe2a0 100%);
-  transform: scale(1.04);
+  background: #ffb84d;
+  transform: scale(1.05);
 }
 
 /* === Modal === */
@@ -194,170 +144,156 @@ h4 {
   position: fixed;
   top: 0; left: 0;
   width: 100vw; height: 100vh;
-  background: rgba(0,0,0,0.7);
+  background: rgba(0,0,0,0.6);
   z-index: 1000;
 }
-
 #importModal .modal-content {
-  background: #fff;
-  color: #3b0073;
-  max-width: 380px;
-  margin: 80px auto;
-  padding: 18px;
+  background: white;
+  color: black;
+  max-width: 400px;
+  margin: 100px auto;
+  padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 4px 16px rgba(50,0,80,0.17);
 }
-
 #importModal button {
   margin-top: 10px;
   padding: 8px 12px;
   border-radius: 6px;
-  background: linear-gradient(90deg, #7d00b8 30%, #3b0073 100%);
-  color: #fff;
-  border: none;
-  font-weight: 600;
-  font-size: 0.9rem;
 }
 
-/* === PAGE 2: Match Results / Court Layout (Solid Background) === */
+/* === PAGE 2: Match Results / Court Layout === */
 #game-results {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 8px;
-  padding: 8px 2vw;
-  background: #7d00b8; /* solid purple */
-  min-height: 90vh;
-  border-radius: 14px;
-  box-shadow: 0 4px 16px rgba(60,0,100,0.10);
-  overflow-y: auto;
+  gap: 5px;
+  padding: 5px 5px 5px;
+  background: linear-gradient(180deg, #3b0073 0%, #7d00b8 100%);
+  min-height: 40vh;
 }
 
 .match-card {
-  background: #fff;
+  background: white;
   color: #3b0073;
   border-radius: 12px;
-  box-shadow: 0 3px 12px rgba(50, 0, 80, 0.22);
-  padding: 10px 6px;
-  width: 98%;
-  max-width: 100%;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  padding: 15px;
+  width: 90%;
+  max-width: 600px;
   text-align: center;
   font-weight: bold;
-  margin-bottom: 4px;
-  border: 2px solid #ece2f5;
-  font-size: 0.9rem;
 }
 
 .match-card h3 {
   color: #3b0073;
-  font-size: 1rem;
-  margin-bottom: 8px;
-  font-weight: 700;
+  font-size: 22px;
+  margin-bottom: 10px;
 }
 
 .match-card .teams {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 4px;
-  margin-bottom: 6px;
+  gap: 10px;
+  margin-bottom: 10px;
 }
 
 .team {
   display: flex;
   flex-direction: column;
-  width: 48%;
-  gap: 4px;
-}
-
-.Lplayer-btn, .Rplayer-btn {
-  font-size: 0.85rem;
-  padding: 6px;
-  margin: 2px 0;
-  border-radius: 6px;
-  text-align: center;
-  border: none;
-  font-weight: 600;
-  box-shadow: 0 1px 3px rgba(60,0,100,0.10);
-  transition: transform 0.2s, background 0.2s;
+  width: 45%;
 }
 
 .Lplayer-btn {
-  background: linear-gradient(90deg, #009c3c 70%, #4dd093 100%);
-  color: #fff;
+  background: #009c3c;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  padding: 10px;
+  margin: 4px 0;
+  text-align: center;
+  transition: transform 0.2s, background 0.2s;
 }
 
 .Lplayer-btn:hover {
+  background: #34995b;
   transform: scale(1.03);
 }
-
 .Rplayer-btn {
-  background: linear-gradient(90deg, #0494ad 70%, #6ee3f6 100%);
-  color: #fff;
+  background: #0494ad;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  padding: 10px;
+  margin: 4px 0;
+  text-align: center;
+  transition: transform 0.2s, background 0.2s;
 }
 
 .Rplayer-btn:hover {
+  background: #3f8e9c;
   transform: scale(1.03);
 }
 
 .vs-text {
-  font-size: 0.9rem;
+  font-size: 20px;
   font-weight: bold;
-  color: #fff;
-  margin: 0 4px;
+  color: #3b0073;
 }
 
 .match-time {
-  margin-top: 4px;
-  font-size: 0.8rem;
-  color: #fff;
+  margin-top: 10px;
+  font-size: 16px;
+  color: #3b0073;
   font-weight: 600;
 }
 
 .swipe-hint {
-  font-size: 12px;
-  color: #e0cfff;
-  margin-top: 8px;
+  font-size: 14px;
+  color: #ccc;
+  margin-top: 30px;
   text-align: center;
 }
 
-/* === Round Navigation === */
+/* === NEW: Round Navigation (Improved) === */
 .round-navigation {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 4px;
-  margin-top: 6px;
-  padding: 4px 0;
-  background: linear-gradient(135deg, #2a2a72, #009ffd 80%);
-  border-radius: 10px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.13);
+  gap: 25px;
+  margin-top: 15px;
+  padding: 5px;
+  background: linear-gradient(135deg, #2a2a72, #009ffd);
+  border-radius: 12px;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
 }
 
 .round-navigation .round-label {
   color: #fff;
-  font-weight: 700;
-  font-size: 0.85rem;
-  text-shadow: 0 1px 2px rgba(0,0,0,0.17);
+  font-weight: 600;
+  font-size: 1rem;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 .round-navigation button {
   background: #fff;
   border: none;
-  padding: 4px 8px;
-  font-size: 0.8rem;
-  font-weight: 700;
-  border-radius: 6px;
+  padding: 8px 16px;
+  font-size: 0.95rem;
+  font-weight: 600;
+  border-radius: 8px;
   cursor: pointer;
-  transition: all 0.23s ease;
-  min-width: 40px;
-  box-shadow: 0 1px 3px rgba(60,0,100,0.10);
+  transition: all 0.25s ease;
+  min-width: 50px;
 }
 
 .round-navigation button:hover:enabled {
   background: #009ffd;
   color: #fff;
-  transform: translateY(-1px) scale(1.03);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  transform: translateY(-1px);
 }
 
 .round-navigation button:disabled {
@@ -365,16 +301,26 @@ h4 {
   cursor: not-allowed;
 }
 
-/* === Divider === */
-.section-divider {
-  width: 100%;
-  height: 1.5px;
-  background: linear-gradient(90deg, #7d00b8, #ff9800);
-  border-radius: 2px;
-  margin: 16px 0;
-  opacity: 0.15;
+@media (max-width: 600px) {
+  .match-card {
+    width: 95%;
+    padding: 18px;
+  }
+  .teams {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 8px;
+  }
+  .team {
+    width: 48%;
+  }
+  .round-navigation {    
+    gap: 10px;
+  }
+  .round-navigation .round-label {
+    font-size: 0.9rem;
+  }
 }
-
   </style>
 </head>
 <body onload="initPage()">
@@ -1284,6 +1230,7 @@ function showRound(index) {
   </script>
 </body>
 </html>
+
 
 
 
