--- a/Kari Games Scheduler_V1.html
+++ b/Kari Games Scheduler_V1.html
@@ -362,6 +362,7 @@ h4 {
       </div>
 
       <!-- Fixed Pairs -->
+       
       <div class="card">
         <h3>Set Fixed Pairs (Optional)</h3>
         <select id="fixed-pair-1"></select>
@@ -572,6 +573,7 @@ h4 {
     }
 
 function Aischeduler(players, numCourts, totalRounds = 100, fixedPairs = []) {
+  players=[...players].sort(() => Math.random() - 0.5);
   const numPlayersPerRound = numCourts * 4;
   const totalPlayers = players.length;
   const numResting = totalPlayers > numPlayersPerRound ? totalPlayers - numPlayersPerRound : 0;
@@ -649,8 +651,104 @@ function Aischeduler(players, numCourts, totalRounds = 100, fixedPairs = []) {
 }
 
 
-
 function Aischeduler2(players, numCourts, totalRounds = 100, fixedPairs = []) {
+  players=[...players].sort(() => Math.random() - 0.5);
+  const numPlayersPerRound = numCourts * 4;
+  const totalPlayers = players.length;
+  const numResting = totalPlayers > numPlayersPerRound ? totalPlayers - numPlayersPerRound : 0;
+
+  const rounds = [];
+  const playedTogether = new Map(); // pairKey -> last round index
+  const restCount = new Map(players.map(p => [p, 0])); // player -> number of rests
+
+  for (let round = 0; round < totalRounds; round++) {
+    // 1️⃣ Choose resting and playing players fairly
+    const sortedByRest = [...players].sort((a, b) => restCount.get(a) - restCount.get(b));
+
+    let resting = [];
+    let playing = [];
+    if (numResting > 0) {
+      resting = sortedByRest.slice(0, numResting);
+      playing = sortedByRest.slice(numResting, numResting + numPlayersPerRound);
+    } else {
+      playing = [...sortedByRest];
+    }
+
+    // 2️⃣ Prepare resting display and increment count
+    const restingWithNumber = resting.map(p => {
+      const count = (restCount.get(p) || 0) + 1;
+      restCount.set(p, count);
+      return `${p}#${count}`;
+    });
+
+    // 3️⃣ Pair selection
+    const pairs = [];
+    const usedPlayers = new Set();
+
+    // --- 3a. Include fixed pairs first ---
+    for (const pair of fixedPairs) {
+      const [p1, p2] = pair;
+      if (playing.includes(p1) && playing.includes(p2) &&
+          !usedPlayers.has(p1) && !usedPlayers.has(p2)) {
+        pairs.push([p1, p2]);
+        usedPlayers.add(p1);
+        usedPlayers.add(p2);
+        playedTogether.set([p1, p2].sort().join(' & '), round);
+      }
+    }
+
+    // --- 3b. Form dynamic pairs from remaining players ---
+    const freePlayers = playing.filter(p => !usedPlayers.has(p));
+
+    // Generate all possible pairs with freshness score
+    const pairScores = [];
+    for (let i = 0; i < freePlayers.length - 1; i++) {
+      for (let j = i + 1; j < freePlayers.length; j++) {
+        const key = [freePlayers[i], freePlayers[j]].sort().join(' & ');
+        const score = playedTogether.has(key) ? round - playedTogether.get(key) : Infinity;
+        pairScores.push({ key, players: [freePlayers[i], freePlayers[j]], score });
+      }
+    }
+
+    // Sort by freshness (new pairs first)
+    pairScores.sort((a, b) => {
+      const sa = a.score === Infinity ? 999999 : a.score;
+      const sb = b.score === Infinity ? 999999 : b.score;
+      return sb - sa;
+    });
+
+    // Pick pairs greedily
+    for (const { players: [p1, p2], key } of pairScores) {
+      if (!usedPlayers.has(p1) && !usedPlayers.has(p2)) {
+        pairs.push([p1, p2]);
+        usedPlayers.add(p1);
+        usedPlayers.add(p2);
+        playedTogether.set(key, round);
+      }
+    }
+
+    // 4️⃣ Form games (pair vs pair)
+    const games = [];
+    for (let i = 0; i < pairs.length - 1 && games.length < numCourts; i += 2) {
+      const pair1 = pairs[i];
+      const pair2 = pairs[i + 1];
+      if (pair2) games.push({ court: games.length + 1, pair1, pair2 });
+    }
+
+    // 5️⃣ Save round
+    rounds.push({
+      round: round + 1,
+      resting: restingWithNumber,
+      playing,
+      games,
+    });
+  }
+
+  return rounds;
+}
+
+
+function Aischeduler3(players, numCourts, totalRounds = 100, fixedPairs = []) {
   const numPlayersPerRound = numCourts * 4;
   const totalPlayers = players.length;
   const numResting = totalPlayers > numPlayersPerRound ? totalPlayers - numPlayersPerRound : 0;
